# Sciwork_Conf_2024

./: .gitignore  Makefile  README.md  index.html  pyproject.toml  requirements.txt  styles.css
notebook/: capture_graph.ipynb  fx_graph.ipynb  mem_plan.ipynb  ortools-cheatsheet.ipynb
notebook/labs/: capture_graph.ipynb  model.py  simple_model.tflite  simple_model_mem_alloc_data.pkl
notebook/labs/finished/: mem_plan.ipynb
ortools-cheatsheet/: index.html
slides/: fx_graph.slides.html  ortools-cheatsheet.slides.html
