[project]
name = "sciconf-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "tabulate>=0.9.0",
    "torch==2.2.2",
    "torchvision>=0.17.0",
    "transformers>=4.47.0",
]

[dependency-groups]
dev = ["black>=24.10.0", "ipykernel>=6.29.5", "isort>=5.13.2"]
